--- a/NEO-natal/Content/Site.css
+++ b/NEO-natal/Content/Site.css
@@ -1,24 +1,109 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+﻿/* hex color values
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+       #85a69f  med blue
+       #163b33  THE DARK BLU
+       #fafafa  LIGHT GREEN 
+       #e4e1b4  THE TAN
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
+    rounding the one right corner:
+    border-radius: 0px 50px 0px 0px;
+	border-color: #163b33; ---the dark blu
+	border-style: solid;
+    border-width: .5px; 
+    -----------------------------*/ 
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+
+body
+{
+
+font-family: 'Libre Baskerville', serif;
+background-color: #e4e1b4;
+color: #696969;
+border-radius: 0px 50px 0px 0px:
+}
+h1
+{
+
+border-bottom: 3px solid #cc9900;
+font: 'Libre Baskerville', serif;
+color: #996600;
+}
+#main {
+    padding: 20px;
+    background-color: #b2eaa4;
+    border-radius: 0 4px 4px 4px;
+}
+#preliminaries { /*RETURN HERE, NOT WORKING YET */
+		border-radius: 0px 50px 0px 0px;
+		border-color: #163b33;
+		border-style: solid;
+		border-width: .5px;  
+		background-color: #fafafa;  /* KEEP LIGHT GREEN */
+		/*background: #e4e1b4; /* THE TAN, KEEP */
+}
+a
+{
+color: #034af3; 
+}
+/* Menu Styles ------------------------------*/ 
+ul#menu
+{
+padding: 0px;
+position: relative;
+margin: 0;
+}
+ul#menu li
+{
+display: inline;
+}
+ul#menu li a 
+{
+background-color: #e8eef4;
+padding: 10px 20px;
+text-decoration: none;
+line-height: 2.8em;
+/*CSS3 properties*/
+border-radius: 4px 4px 0 0;
+}
+ul#menu li a:hover
+{
+background-color: #ffffff;
+} 
+/* Forms Styles ------------------------------*/ 
+fieldset
+{
+
+padding-left: 12px;
+} 
+fieldset label
+{
+display: block;
+padding: 4px;
+}
+input[type="text"], input[type="password"]
+{
+width: 300px;
+}
+input[type="submit"]
+{
+padding: 4px;
+}
+/* Data Styles ------------------------------*/ 
+table.data
+{
+background-color:#ffffff;
+border:1px solid #163B33;  /* THE DARK BLU */
+border-collapse:collapse;
+width:100%;
+}
+table.data th
+{
+background-color:#f00;
+border:1px solid #163b33;  /* THE DARK BLU */
+padding:3px;
+}
+table.data td 
+{
+border:1px solid #163b33; /* THE DARK BLU */
+padding:3px;
 }
