--- a/NEO-natal/Views/Mothers_Data/Delete.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Mothers_Data</h4>
+    <h1>Mothers Data</h1>
     <hr />
     <dl class="dl-horizontal">
         <dt>
