--- a/NEO-natal/Views/Mothers_Data/Details.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Mothers_Data</h4>
+    <h1>Mothers Data</h1>
     <hr />
     <dl class="dl-horizontal">
         <dt>
