--- a/NEO-natal/Views/Surveys/Create.cshtml
+++ b/NEO-natal/Views/Surveys/Create.cshtml
@@ -12,10 +12,10 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Survey</h4>
+        <h1>Survey</h1>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" type="text">
             @Html.LabelFor(model => model.mothersId, "mothersId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("mothersId", null, htmlAttributes: new { @class = "form-control" })
@@ -58,10 +58,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.firstChild, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.firstChild)
+               
+                    @Html.EditorFor(model => model.firstChild, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.firstChild, "", new { @class = "text-danger" })
-                </div>
+                
             </div>
         </div>
 
