Updated MOther's Data delete page

--- a/NEO-natal/Views/Mothers_Data/Delete.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Delete.cshtml
@@ -12,75 +12,75 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.communityHealthWorkerID)
+            @Html.LabelFor(model => model.communityHealthWorkerID, "Community Health Worker ID:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.communityHealthWorkerID)
+            @Html.DisplayFor(model => model.communityHealthWorkerID, "Community Health Worker ID:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.firstName)
+            @Html.LabelFor(model => model.firstName, "First Name:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.firstName)
+            @Html.DisplayFor(model => model.firstName, "First Name:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.lastName)
+            @Html.LabelFor(model => model.lastName, "Last Name:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.lastName)
+            @Html.DisplayFor(model => model.lastName, "Last Name:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.dOb)
+            @Html.LabelFor(model => model.dOb, "Date of Birth:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.dOb)
+            @Html.DisplayFor(model => model.dOb, "Date of Birth:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.address)
+            @Html.LabelFor(model => model.address, "Address:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.address)
+            @Html.DisplayFor(model => model.address, "Address:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.zip)
+            @Html.LabelFor(model => model.zip, "Zip:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.zip)
+            @Html.DisplayFor(model => model.zip, "Zip:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.phone)
+            @Html.LabelFor(model => model.phone, "Phone:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.phone)
+            @Html.DisplayFor(model => model.phone, "Phone:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @Html.LabelFor(model => model.email, "Email:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.email)
+            @Html.DisplayFor(model => model.email, "Email:")
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.dueDate)
+            @Html.LabelFor(model => model.dueDate, "Due Date:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.dueDate)
+            @Html.DisplayFor(model => model.dueDate, "Due Date:")
         </dd>
 
     </dl>
