--- a/NEO-natal/Content/bootstrap.css
+++ b/NEO-natal/Content/bootstrap.css
@@ -4384,17 +4384,17 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: ##163b33;
+  border-color: ##163b33;
 }
 
 .navbar-default .navbar-brand {
-  color: #777777;
+  color: ##163b33;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5e5e5e;
+  color: ##163b33;
   background-color: transparent;
 }
 
@@ -4501,12 +4501,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
+  background-color: #652121;
   border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #e4e1b4;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4520,7 +4520,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #bedbdb;   /* the text in the navbar here */
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
