--- a/NEO-natal/Views/Surveys/Create.cshtml
+++ b/NEO-natal/Views/Surveys/Create.cshtml
@@ -7,58 +7,52 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
 </head>
-
-<h2>Create a New Survey</h2>
-
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <form action="Create" method="post">
 
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Survey</h4>
-        <!--  <hr/> do I need this? -->
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="preliminaries">
             <div class="form-group">
-                @Html.LabelFor(model => model.mothersId, "mothersId", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.mothersId, " ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <h5>Enter the mother's token ID.</h5>
+                    <h4>Enter the mother's token ID.</h4>
                     @Html.DropDownList("mothersId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.mothersId, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(model => model.communityHealthWorkerID, "communityHealthWorkerID", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.communityHealthWorkerID, " ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <h5>Please select the ID of the person who is filling out this form here:</h5>
+                    <h4>Please select the ID of the person who is filling out this form here:</h4>
                     @Html.DropDownList("communityHealthWorkerID", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.communityHealthWorkerID, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(model => model.address, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.address, " ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <h5>Enter the mother's address: </h5>
+                    <h4>Enter the mother's address: </h4>
                     @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.zip, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.zip, " ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <h5>Enter the ward number of the mother's primary address:</h5>
+                    <h4>Enter the ward number of the mother's primary address:</h4>
                     @Html.EditorFor(model => model.zip, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.zip, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.race, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.race, " ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <h5>Please enter the mother's race:</h5>
+                    <h4>Please enter the mother's race:</h4>
                     @Html.RadioButtonFor(m => m.race, "1") Non-Hispanic African American<br>
                     @Html.RadioButtonFor(m => m.race, "2") Non-Hispanic White<br>
                     @Html.RadioButtonFor(m => m.race, "3") Non-Hispanic Asian<br>
@@ -71,10 +65,9 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.firstChild, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.firstChild, " ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                c
-                <h5>"Is this your first child?"</h5>
+                <h4>"Is this your first child?"</h4>
                 @Html.RadioButtonFor(m => m.firstChild, "1") yes<br> <!--find scores to add for these... -->
                 @Html.RadioButtonFor(m => m.firstChild, "2") no<br>
                 @Html.ValidationMessageFor(model => model.firstChild, "", new { @class = "text-danger" })
@@ -82,9 +75,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.prematureBirth, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.prematureBirth, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5> "Have you ever given birth prematurely?"</h5>
+            <h4> "Have you ever given birth prematurely?"</h4>
             @Html.RadioButtonFor(m => m.prematureBirth, "1") yes<br> <!-- +5 for this -->
             @Html.RadioButtonFor(m => m.prematureBirth, "2") no<br>  <!-- +0 for this -->
             <!-- @Html.EditorFor(model => model.prematureBirth, new { htmlAttributes = new { @class = "form-control" } }) -->
@@ -92,9 +85,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.visitObgyn, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.visitObgyn, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Have you visited an OBGYN?"</h5>
+            <h4>"Have you visited an OBGYN?"</h4>
             @Html.RadioButtonFor(m => m.visitObgyn, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.visitObgyn, "2") no<br>
 
@@ -103,18 +96,18 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.age, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.age, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"What is your age?"</h5>
+            <h4>"What is your age?"</h4>
 
             @Html.EditorFor(model => model.age, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.age, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.stress, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.stress, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"On a daily basis, would you say your stress level is high, medium or low? "</h5>
+            <h4>"On a daily basis, would you say your stress level is high, medium or low? "</h4>
             @Html.RadioButtonFor(m => m.visitObgyn, "1") high<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.visitObgyn, "2") medium<br>
             @Html.RadioButtonFor(m => m.visitObgyn, "3") low<br> <!--find scores to add for these... -->
@@ -123,18 +116,18 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.smoke, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.smoke, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you smoke?"</h5>
+            <h4>"Do you smoke?"</h4>
             @Html.RadioButtonFor(m => m.smoke, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.smoke, "2") no<br>
             @Html.ValidationMessageFor(model => model.smoke, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.familySmoke, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.familySmoke, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Does anyone in your household smoke?"</h5>
+            <h4>"Does anyone in your household smoke?"</h4>
             @Html.RadioButtonFor(m => m.familySmoke, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.familySmoke, "2") no<br>
             @Html.EditorFor(model => model.familySmoke, new { htmlAttributes = new { @class = "form-control" } })
@@ -142,27 +135,27 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.alcohol, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.alcohol, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you drink alcohol?"</h5>
+            <h4>"Do you drink alcohol?"</h4>
             @Html.RadioButtonFor(m => m.alcohol, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.alcohol, "2") no<br>
             @Html.ValidationMessageFor(model => model.alcohol, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.familyAlcohol, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.familyAlcohol, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Does anyone in your household drink alcohol?"</h5>
+            <h4>"Does anyone in your household drink alcohol?"</h4>
             @Html.RadioButtonFor(m => m.familyAlcohol, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.familyAlcohol, "2") no<br>
             @Html.ValidationMessageFor(model => model.familyAlcohol, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.drugs, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.drugs, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you do drugs?"</h5>
+            <h4>"Do you do drugs?"</h4>
             @Html.RadioButtonFor(m => m.drugs, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.drugs, "2") no<br>
 
@@ -170,27 +163,27 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.familyDrugs, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.familyDrugs, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Does anyone in your household do drugs?"</h5>
+            <h4>"Does anyone in your household do drugs?"</h4>
             @Html.RadioButtonFor(m => m.familyDrugs, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.familyDrugs, "2") no<br>
             @Html.ValidationMessageFor(model => model.familyDrugs, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.safeOwnHome, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.safeOwnHome, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you feel safe in your own home?"</h5>
+            <h4>"Do you feel safe in your own home?"</h4>
             @Html.RadioButtonFor(m => m.safeOwnHome, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.safeOwnHome, "2") no<br>
             @Html.ValidationMessageFor(model => model.safeOwnHome, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.safeNeighborhood, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.safeNeighborhood, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you feel safe in your neighborhood?"</h5>
+            <h4>"Do you feel safe in your neighborhood?"</h4>
             @Html.RadioButtonFor(m => m.safeNeighborhood, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.safeNeighborhood, "2") no<br>
 
@@ -200,46 +193,45 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.chronicIllness, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.chronicIllness, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you currently have a chronic illness?"</h5>
+            <h4>"Do you currently have a chronic illness?"</h4>
             @Html.RadioButtonFor(m => m.chronicIllness, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.chronicIllness, "2") no<br>
             @Html.ValidationMessageFor(model => model.chronicIllness, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.transportation, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.transportation, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you have reliable transportation?"</h5>
+            <h4>"Do you have reliable transportation?"</h4>
             @Html.RadioButtonFor(m => m.transportation, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.transportation, "2") no<br>
             @Html.ValidationMessageFor(model => model.transportation, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.homeInternet, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.homeInternet, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you have reliable internet access in your home?"</h5>
+            <h4>"Do you have reliable internet access in your home?"</h4>
             @Html.RadioButtonFor(m => m.homeInternet, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.homeInternet, "2") no<br>
             @Html.ValidationMessageFor(model => model.homeInternet, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.mobileInternet, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.mobileInternet, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>Do you have mobile internet access?"</h5>
+            <h4>Do you have mobile internet access?"</h4>
             @Html.RadioButtonFor(m => m.mobileInternet, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.mobileInternet, "2") no<br>
-
             @Html.ValidationMessageFor(model => model.mobileInternet, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.diet, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.diet, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Which of these would you say you eat on a daily basis?"</h5>
+            <h4>"Which of these would you say you eat on a daily basis?"</h4>
             @Html.RadioButtonFor(m => m.diet, "1") Red meat <br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.diet, "2") White meat <br>
             @Html.RadioButtonFor(m => m.diet, "3") Fish<br> <!--find scores to add for these... -->
@@ -248,29 +240,30 @@
             @Html.RadioButtonFor(m => m.diet, "6") Bread/Rice/Pasta/Potatoes (other carbohydrates) <br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.diet, "7") Milk and other diary products  <br>
             @Html.RadioButtonFor(m => m.diet, "8") Candy/Potato Chips/other junk food/high fat foods  <br> <!--find scores to add for these... -->
-
             @Html.ValidationMessageFor(model => model.diet, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.govAssistance, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.govAssistance, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <h5>"Do you receive government assistance?"</h5>
+            <h4>"Do you receive government assistance?"</h4>
             @Html.RadioButtonFor(m => m.govAssistance, "1") yes<br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.govAssistance, "2") no<br>
             @Html.ValidationMessageFor(model => model.govAssistance, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.income, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.income, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            <h4>"Which of the following ranges does your income fall within?"</h4>
             @Html.EditorFor(model => model.income, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.income, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.education, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.education, " ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            <h4>"Which of the following ranges does your income fall within?"</h4>
             @Html.EditorFor(model => model.education, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.education, "", new { @class = "text-danger" })
         </div>
@@ -280,9 +273,7 @@
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
-
     }
-
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
