--- a/NEO-natal/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/NEO-natal/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
+
 <div>
     <p>
         Please check your email to reset your password.
