--- a/NEO-natal/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/NEO-natal/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
