--- a/NEO-natal/Views/Surveys/Index.cshtml
+++ b/NEO-natal/Views/Surveys/Index.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewBag.Title = "Surveys";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Index</h2>
 <h1>Surveys</h1>
 
 <p>
