--- a/NEO-natal/Views/Account/ConfirmEmail.cshtml
+++ b/NEO-natal/Views/Account/ConfirmEmail.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewBag.Title = "Confirm Email";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
+
 
 <h2>@ViewBag.Title.</h2>
+
 <div>
     <p>
         Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
