--- a/NEO-natal/Views/CommunityHealthWorkers/Delete.cshtml
+++ b/NEO-natal/Views/CommunityHealthWorkers/Delete.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Delete</h2>
+<h2>Delete a Healthcare Worker</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
