--- a/NEO-natal/Views/CommunityHealthWorkers/Edit.cshtml
+++ b/NEO-natal/Views/CommunityHealthWorkers/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 <h2>Edit</h2>
 
 
