--- a/NEO-natal/Views/Home/About.cshtml
+++ b/NEO-natal/Views/Home/About.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
+
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
