--- a/NEO-natal/Views/Home/Index.cshtml
+++ b/NEO-natal/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 <div class="jumbotron">
     <h1>NEO+natal</h1>
     <p class="lead"></p>
