--- a/NEO-natal/Views/Manage/Index.cshtml
+++ b/NEO-natal/Views/Manage/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Manage";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <h2>@ViewBag.Title.</h2>
 
