--- a/NEO-natal/Views/Manage/ManageLogins.cshtml
+++ b/NEO-natal/Views/Manage/ManageLogins.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Manage your external logins";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <h2>@ViewBag.Title.</h2>
 
