--- a/NEO-natal/Views/Manage/SetPassword.cshtml
+++ b/NEO-natal/Views/Manage/SetPassword.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Create Password";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
