--- a/NEO-natal/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/NEO-natal/Views/Manage/VerifyPhoneNumber.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Verify Phone Number";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <h2>@ViewBag.Title.</h2>
 
