--- a/NEO-natal/Views/Mothers_Data/Create.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Create.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewBag.Title = "Create";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Create</h2>
+<h2>Register a newMother</h2>
 
 
 @using (Html.BeginForm()) 
