--- a/NEO-natal/Views/Mothers_Data/Details.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Details";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
 <h2>Details</h2>
 
