--- a/NEO-natal/Views/Mothers_Data/Index.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Index.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewBag.Title = "Mother's Data";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Index</h2>
 <h1>Mother's Data</h1>
 
 
