--- a/NEO-natal/Views/Surveys/Edit.cshtml
+++ b/NEO-natal/Views/Surveys/Edit.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewBag.Title = "Edit";
 }
+<div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Edit</h2>
+<h2>Edit a Survey</h2>
 
 
 @using (Html.BeginForm())
