I can't remember what these very important changes were...

--- a/NEO-natal/Views/Home/About.cshtml
+++ b/NEO-natal/Views/Home/About.cshtml
@@ -3,7 +3,11 @@
 }
 <div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>About NEO+natal:</h2>
+<!-- <h3>@ViewBag.Message</h3> -->
 
-<p>Use this area to provide additional information.</p>
+<p>
+    From 2004 to 2010, infant mortality rate for Cleveland has been resistant to change, ranging from 13.6 to 14.6 deaths under 1 year of age per 1,000 live births.*
+</p>
+
+<p> *Information taken from Infant Mortality in Cleveland - A report for Cleveland City Council Helath Committee</p>
