--- a/NEO-natal/Views/Mothers_Data/Create.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Create.cshtml
@@ -5,7 +5,7 @@
 }
 <div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>Register a newMother</h2>
+<h2>Register a New Mother</h2>
 
 
 @using (Html.BeginForm()) 
