--- a/NEO-natal/Content/bootstrap.css
+++ b/NEO-natal/Content/bootstrap.css
@@ -4521,6 +4521,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-nav > li > a {
   color: #bedbdb;   /* the text in the navbar here */
+ /* font-size: 125%;*/
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
