--- a/NEO-natal/Views/Shared/_Layout.cshtml
+++ b/NEO-natal/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
+                <!-- <a class="pull-left"><img src="Content/headForWebAndDevicesgrnv2.svg" alt="Sleepy baby" height="100" width="100"></a> -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
@@ -40,6 +41,8 @@
     <div class="container body-content">
         @RenderBody()
         <!--<hr />-->
+        <a class="pull-left face"><img src="Content/headForWebAndDevicesgrnv2.svg" alt="Sleepy baby" height="1000" width="1000"></a>
+
         <footer>
             <p></p>
         </footer>
