--- a/NEO-natal/Views/Surveys/Index.cshtml
+++ b/NEO-natal/Views/Surveys/Index.cshtml
@@ -39,7 +39,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID }) |
+            @Html.ActionLink("RiskScore", "RiskScore", new { id = item.ID })
         </td>
     </tr>
 }
