updated mother's view

--- a/NEO-natal/Views/Mothers_Data/Delete.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Delete.cshtml
@@ -53,7 +53,7 @@
         </dd>
 
         <dt>
-            @Html.LabelFor(model => model.zip, "Zip:")
+            @Html.LabelFor(model => model.zip, "Ward:")
         </dt>
 
         <dd>
