--- a/NEO-natal/Views/Mothers_Data/Details.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Details.cshtml
@@ -52,11 +52,11 @@
         </dd>
 
         <dt>
-            @Html.LabelFor(model => model.zip, "Zip:")
+            @Html.LabelFor(model => model.zip, "Ward:")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.zip, "Zip:")
+            @Html.DisplayFor(model => model.zip, "Ward:")
         </dd>
 
         <dt>
