--- a/NEO-natal/Views/Mothers_Data/Create.cshtml
+++ b/NEO-natal/Views/Mothers_Data/Create.cshtml
@@ -65,7 +65,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.zip, "Zip Code:", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.zip, "Ward:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.zip, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.zip, "", new { @class = "text-danger" })
