--- a/NEO-natal/Views/Surveys/RiskScore.cshtml
+++ b/NEO-natal/Views/Surveys/RiskScore.cshtml
@@ -13,4 +13,15 @@
   
     <h1 align="center">@Html.DisplayFor(model => model.riskScore)</h1>       
 </div>
+
+<div class="form-horizontal">
+    <h6 align="center">Score Associated with Risk Level </h6>
+    <h6 align="center">Low Risk < 50 </h6>
+    <h6 align="center">Moderate Risk 50-70</h6>
+    <h6 align="center">High > 70</h6>
+
+    <hr />
+
+    
+</div>
     
