--- a/NEO-natal/Views/Home/About.cshtml
+++ b/NEO-natal/Views/Home/About.cshtml
@@ -3,7 +3,12 @@
 }
 <div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
 
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>NEO-natal is a new approach to combating high infant mortality in many inner-cities. </h3>
 
-<p>NEO-natal is a new approach to combating high infant mortality in many inner-cities. Recognizing that the best way to curb the problem is by focusing limited resources on the mothers with the highest probable chance of having a child die, the team developed a unique risk profile for mothers based on publically available demographic and geographic data correlated against clinical/medical research. With this new statistical tool, the team developed a short questionnaire that could be used by a community health worker to assess the risk level of a mother almost instantly.</p>
+<p>Recognizing that the best way to curb the problem is by focusing limited resources on the mothers with the highest probable chance of having a child die, the team developed a unique risk profile for mothers based on publically available demographic and geographic data correlated against clinical/medical research. With this new statistical tool, the team developed a short questionnaire that could be used by a community health worker to assess the risk level of a mother almost instantly.</p>
+
+<p>This process was bundled into a tablet app that seamlessly integrates the survey (and results) with the United Way 2-1-1 Hotline of community services and a repository of known beneficial behavior changes. This empowers community health worker to take concrete actions to address risks to potentially save an unborn child’s life. </p>
+
+<p> Team members developing this app were Val Van Sice, Mike Norris and Isiah Donner. </p>
+
+<p>Team members for the initial Cleveland Hackathon project included: Eugene Malinskiy (Founder & CEO, Dragon ID), Ilya Malinskiy (Lead Engineer, Dragon ID), Haylee Barbo (Account Development Rep, Arrow Electronics), Daniel Dudley (COO, Dragon ID), Brad Roskoph (Dragon ID and CSU Biomedical Engineer), Brittany Johnson, (Senior Research Associate for the Healthcare Initiative at the University of Michigan) and Jessica Ice (Research Analyst, Federal Reserve Bank of Cleveland).</p>
