--- a/NEO-natal/Views/Surveys/Create.cshtml
+++ b/NEO-natal/Views/Surveys/Create.cshtml
@@ -289,7 +289,7 @@
             <h4>"What is your education level?"</h4>
             @Html.RadioButtonFor(m => m.education, "1") Some High School <br> <!--find scores to add for these... -->
             @Html.RadioButtonFor(m => m.education, "2") High School Diploma or GED <br>
-            @Html.RadioButtonFor(m => m.education, "3") Some college or higher<br> <!--find scores to add for these... -->
+            @Html.RadioButtonFor(m => m.education, "3") Some college, Military, or higher<br> <!--find scores to add for these... -->
             @Html.ValidationMessageFor(model => model.education, "", new { @class = "text-danger" })
         </div>
     </div>
