--- a/NEO-natal/Views/Surveys/RiskScore.cshtml
+++ b/NEO-natal/Views/Surveys/RiskScore.cshtml
@@ -24,4 +24,15 @@
 
     
 </div>
+
+<div class="form-horizontal">
+    <h6 align="center">United Way Greater Cleveland 2-1-1</h6>
+    <h6 align="center">http://www.211oh.org/</h6>
+
+   
+
+    <hr />
+
+
+</div>
     
