--- a/NEO-natal/Views/Home/Index.cshtml
+++ b/NEO-natal/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewBag.Title = "Home Page";
 }
 <div style="height: 100px;"></div> <!-- this so the banner doesn't cover the page content -->
-<div class="jumbotron">
-    <h1>NEO+natal</h1>
+<div class="jumbotron"; style="width:1000px; margin:0 auto;">
+
+    <img src="~/Content/logo4x.svg" alt="logo" align="middle"> 
+    <!-- <h1>NEO+natal</h1> -->
     <p class="lead"></p>
     
 </div>
